--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,5 @@
 <ion-tabs>
   <ion-progress-bar type="indeterminate"></ion-progress-bar>
-  <app-user></app-user>
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
@@ -10,12 +9,12 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon name="compass"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>{{'Tabs.Map'}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="settings"></ion-icon>
+      <ion-label>{{'Tabs.Settings'}}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
