--- a/src/app/tabs/home/home.page.html
+++ b/src/app/tabs/home/home.page.html
@@ -1,14 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      {{'user'}}
+      {{'Tabs.Home' | translate}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <section>
-    Home section;
     <app-player></app-player>
   </section>
 </ion-content>
