--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,13 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+ion-app {
+    max-width: 1024px;
+}
+
+.bar-loading {
+    margin-top: 20px;
+    position: absolute;
+    z-index: 1000;
+}
