--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,19 @@
 <ion-tabs>
-  <ion-progress-bar type="indeterminate"></ion-progress-bar>
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
-      <ion-label>{{'Tabs.Home'}}</ion-label>
+      <ion-label>{{'Tabs.Home' | translate}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="compass"></ion-icon>
-      <ion-label>{{'Tabs.Map'}}</ion-label>
+      <ion-label>{{'Tabs.Map' | translate}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="settings"></ion-icon>
-      <ion-label>{{'Tabs.Settings'}}</ion-label>
+      <ion-label>{{'Tabs.Settings' | translate}}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
